force-app/main/default/objects/Booking_Validation_Parameters__mdt/Booking_Validation_Parameters__mdt.object-meta.xml
<CustomObject>
    <label>Booking Validation Parameters</label>
    <pluralLabel>Booking Validation Parameters</pluralLabel>
</CustomObject>