force-app/main/default/objects/Booking_Validation_Parameters__mdt/fields/Booking_Threshold_Hr__c.field-meta.xml
<CustomField>
    <fullName>Booking_Threshold_Hr__c</fullName>
    <label>Booking Threshold Hr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>