force-app/main/default/objects/Booking_Validation_Parameters__mdt/fields/Dep_Dom_Service_Time__c.field-meta.xml
<CustomField>
    <fullName>Dep_Dom_Service_Time__c</fullName>
    <label>Dep Dom Service Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>