force-app/main/default/objects/Booking_Validation_Parameters__mdt/fields/Surcharge_Applicable_Hours_Within__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Applicable_Hours_Within__c</fullName>
    <label>Surcharge Applicable Hours Within</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>