force-app/main/default/objects/Booking_Validation_Parameters__mdt/fields/Transit_Min_Flight_Gap_Hr__c.field-meta.xml
<CustomField>
    <fullName>Transit_Min_Flight_Gap_Hr__c</fullName>
    <label>Transit Min Flight Gap Hr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>